@@ -1,37 +1,66 @@
-import lombok.Getter;
-
+import java.io.BufferedReader;
+import java.io.FileReader;
+import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
-public class StudentManager extends StudentDBIO{
+public class StudentManager extends StudentDBIO {
     private static StudentManager instance;
     private Student student;
-    private static List<Student> studentList = new ArrayList<Student>();
+    List<String> studentList;
     StudentDBIO studentDBIO;
 
-    private StudentManager(){}
 
-    public static StudentManager getinstance(){
-        if(instance == null){
+    public static StudentManager getinstance() {
+        if (instance == null) {
             instance = new StudentManager();
         }
         return instance;
     }
 
-    public static List<Student> getStudentList() {
+    @Override
+    public List<String> saveStudntData() {
+        studentList = new ArrayList<>();
+        studentList.add(student.getSno());
+        studentList.add(student.getName());
+        studentList.add(String.valueOf(student.getKorean()));
+        studentList.add(String.valueOf(student.getEnglish()));
+        studentList.add(String.valueOf(student.getMath()));
+        studentList.add(String.valueOf(student.getScience()));
+        studentList.add(String.valueOf(student.getTotal()));
+        studentList.add(String.valueOf(student.getAverage()));
+        studentList.add(String.valueOf(student.getGrade()));
         return studentList;
     }
 
-    @Override
-    public List<Student> saveStudntData() {
-        studentList.add(student);
-        return studentList;
-    }
-
 
     @Override
-    public List<String> getStudntData() {
-        return List.of();
+    public List<Student> getStudntData() {
+        StudentFileIO studentFileIO = new StudentFileIO();
+
+        List<Student> loadStudentList = new ArrayList<>(); //학생객체를 담을 리스트
+        List<String> loadStudentInfo = studentFileIO.loadStudentInfo(); // 파일에서 읽은 학생 정보 리스트
+
+        for (String info : loadStudentInfo) { //for each믄 : 로드한 데이터를 쉼표기준으로 분리
+            List<String> lineStudent = Arrays.asList(info.split(","));
+        //lineSudent의 요소를 Student 순서에 맞게 대입
+        String sno = lineStudent.get(0);// 학번
+        String name = lineStudent.get(1); // 이름
+        int korean = Integer.parseInt(lineStudent.get(2)); // 국어
+        int english = Integer.parseInt(lineStudent.get(3)); // 영어
+        int math = Integer.parseInt(lineStudent.get(4)); // 수학
+        int science = Integer.parseInt(lineStudent.get(5)); // 과학
+        int total = Integer.parseInt(lineStudent.get(6));
+        double average = Double.parseDouble(lineStudent.get(7));
+        char grade = lineStudent.get(8).charAt(0);
+        //lineStudentList.get(8)에서 가져온 문자열의 첫 번째 문자를 char로 변환
+        // StudentManager의 createStudentFromData 메서드를 통해 학생 객체 생성하여 대입
+        Student student = StudentManager.getinstance().createStudentFromData(sno, name, korean, english, math, science, total, average, grade);
+        loadStudentList.add(student);
+        }
+        return loadStudentList;
+
     }
 
     @Override
@@ -67,6 +96,8 @@ public class StudentManager extends StudentDBIO{
     @Override
     public Student inputstuData() {
         student = new Student.StudentBuilder().build();// 학생정보를 빌더로 입력받음
+        saveStudntData();
+        StudentFileIO studentFileIO = new StudentFileIO();
         return student;
     }
 
@@ -83,5 +114,19 @@ public class StudentManager extends StudentDBIO{
     @Override
     public String printAllStudent(List<Student> students) {
         return "";
+    }
+
+    //데이터 로드시 생성할 생성자로 사용
+    public Student createStudentFromData(String sno, String name, int korean, int english, int math, int science,int total,double average,char grade) {
+        student.setSno(sno);
+        student.setName(name);
+        student.setKorean(korean);
+        student.setEnglish(english);
+        student.setMath(math);
+        student.setScience(science);
+        student.setTotal(total);
+        student.setAverage(average);
+        student.setGrade(grade);
+        return student;
     }
 }
